<resources>
    <string name="app_name">SendBirdSampleApp</string>

    <string name="sample_version">Sample UI v%1$s / SDK v%2$s</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="back">Back</string>


    <!--Login page-->
    <string name="logo_desc">SendBird Logo</string>
    <string name="user_id">User ID</string>
    <string name="nickname">Nickname</string>
    <string name="connect">Connect</string>
    <string name="nickname_missing">Nickname Missing</string>
    <string name="user_id_missing">UserId Missing</string>
    <string name="login_failed">Login to SendBird Failed</string>

    <!--Main page-->
    <string name="open_channel">Open Channels</string>
    <string name="group_channel">Group Channels</string>
    <string name="calls">Calls</string>
    <string name="disconnected">Disconnected</string>
    <string name="select_channel_type">Select Channel Type</string>
    <string name="logout">Logout</string>

    <!--Channel page-->
    <string name="channel_icon">"Channel Icon</string>

    <!--Group Channel-->
    <string name="group_channel_create_failed">Failed to create a group channel</string>
    <string name="group_channels">Group Channels</string>
    
    <!--Create Channel-->
    <string name="user_icon">User Icon</string>
    <string name="create">Create</string>
    <string name="create_channel">Create Channel</string>

    <!--Chat-->
    <string name="upload">Upload</string>
    <string name="hints">Enter Message</string>
    <string name="send">SEND</string>
    <string name="date_placeholder">June 10</string>
    <string name="name_placeholder">John Grady Cole</string>
    <string name="message_placeholder">This is a message</string>
    <string name="url_placeholder">Youtube</string>
    <string name="title_placeholder">Good News</string>
    <string name="description_placeholder">This is a description</string>
    <string name="message_time_placeholder">12:20</string>
    <string name="message_count_placeholder">1</string>
    <string name="link_preview">Link Preview</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="admin_text">User has entered chat</string>
    <string name="file_icon">File Icon</string>
    <string name="file_name">FileName.txt</string>


<!--    Calls-->

    <string name="calls_app_name">SendBird Calls</string>
    <string name="calls_quickstart_version">Quickstart %s</string>
    <string name="calls_sdk_version">SDK %s</string>
    <string name="calls_sign_in_with_qrcode">SIGN IN WITH QR CODE</string>
    <string name="calls_scanning_a_qrcode_description">Sign in by scanning a QR code found in the Calls Studio of the SendBird Dashboard</string>
    <string name="calls_or">Or</string>
    <string name="calls_sign_in_manually">SIGN IN MANUALLY</string>
    <string name="calls_sign_in_manually_title">Sign in manually</string>
    <string name="calls_app_id">App ID</string>
    <string name="calls_user_id">User ID</string>
    <string name="calls_access_token">User access token (Optional)</string>
    <string name="calls_sign_in">SIGN IN</string>

    <string name="calls_make_a_call">Make a call</string>
    <string name="calls_make_a_call_description">Enter the user ID of the user you wish to call, then press one of the video or voice call buttons</string>
    <string name="calls_history">History</string>
    <string name="calls_settings">Settings</string>
    <string name="calls_application_information">Application information</string>
    <string name="calls_application_id">Application ID</string>
    <string name="calls_sign_out">Sign out</string>

    <string name="calls_muted_this_call">%s is on mute</string>
    <string name="calls_incoming_voice_call">Incoming voice call&#8230;</string>
    <string name="calls_incoming_video_call">Incoming video call&#8230;</string>
    <string name="calls_connecting_call">Connecting&#8230;</string>
    <string name="calls_calling">Calling&#8230;</string>
    <string name="calls_video_calling">Video calling&#8230;</string>
    <string name="calls_ending_voice_call">Ending voice call&#8230;</string>
    <string name="calls_ending_video_call">Ending video call&#8230;</string>

    <string name="calls_end_result_no_answer">No answer</string>
    <string name="calls_end_result_canceled">Canceled</string>
    <string name="calls_end_result_declined">Declined</string>
    <string name="calls_end_result_completed">Ended</string>
    <string name="calls_end_result_timed_out">Timed out</string>
    <string name="calls_end_result_connection_lost">Connection lost</string>
    <string name="calls_end_result_unknown">Unknown</string>
    <string name="calls_end_result_accept_failed">Accept failed</string>
    <string name="calls_end_result_dial_failed">Dial failed</string>
    <string name="calls_end_result_other_device_accepted">Other device accepted</string>

    <string name="calls_invalid_notifications_not_active_for_qrcode">Mobile sign-in is not enabled. Please first enable notifications on the SendBird Dashboard.</string>
    <string name="calls_invalid_for_qrcode">This QR code is not valid. Please generate and scan a user-specific QR code in Calls studio.</string>

</resources>
