<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_group_chat_other_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:background="@drawable/group_chat_date_background"
        android:paddingStart="@dimen/date_horizontal_padding"
        android:paddingTop="@dimen/date_vertical_padding"
        android:paddingEnd="@dimen/date_horizontal_padding"
        android:paddingBottom="@dimen/date_vertical_padding"
        android:text="@string/date_placeholder"
        android:textColor="@color/groupChatDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_group_chat_other_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_group_chat_other_date" />

    <TextView
        android:id="@+id/text_group_chat_other_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin"
        android:text="@string/name_placeholder"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toEndOf="@+id/image_group_chat_other_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_group_chat_other_date" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_group_chat_other_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/groupChatBubbleOther"
        app:cardCornerRadius="@dimen/card_corners"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@+id/image_group_chat_other_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_group_chat_other_user">

        <ImageView
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:id="@+id/image_group_thumbnail"
            android:scaleType="centerCrop"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true"/>

        <ImageView
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/thumbnail_image"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_group_chat_other_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_count_placeholder"
        android:textColor="@color/groupChatReadReceiptOther"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toTopOf="@+id/text_group_chat_other_message_date"
        app:layout_constraintStart_toEndOf="@id/card_group_chat_other_message" />

    <TextView
        android:id="@+id/text_group_chat_other_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time_placeholder"
        android:textColor="@color/groupChatDateBackground"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toBottomOf="@+id/card_group_chat_other_message"
        app:layout_constraintStart_toEndOf="@+id/card_group_chat_other_message" />


</android.support.constraint.ConstraintLayout>