<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/layout_padding"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text_gchat_date_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:background="@drawable/group_chat_date_background"
        android:paddingStart="@dimen/date_horizontal_padding"
        android:paddingTop="@dimen/date_vertical_padding"
        android:paddingEnd="@dimen/date_horizontal_padding"
        android:paddingBottom="@dimen/date_vertical_padding"
        android:text="@string/date_placeholder"
        android:textColor="@color/groupChatDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_gchat_profile_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_date_other" />

    <TextView
        android:id="@+id/text_gchat_user_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin"
        android:text="@string/name_placeholder"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toEndOf="@+id/image_gchat_profile_other"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_date_other" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_gchat_message_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/groupChatBubbleOther"
        app:cardCornerRadius="@dimen/card_corners"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@+id/image_gchat_profile_other"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_user_other">

        <LinearLayout
            android:id="@+id/layout_gchat_container_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_gchat_message_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_padding"
                android:maxWidth="@dimen/card_max_width"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@string/message_placeholder"
                android:textColor="@color/groupChatTextOther"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layout_gchat_link_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/text_gchat_separator_other"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginLeft="@dimen/card_corners"
                    android:layout_marginRight="@dimen/card_corners"
                    android:background="@android:color/darker_gray"
                    android:maxWidth="@dimen/card_max_width" />

                <TextView
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/profile_margin"
                    android:id="@+id/text_gchat_site_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="@dimen/card_max_width"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/url_placeholder"
                    android:textColor="@color/groupChatTextOther"
                    android:textSize="@dimen/text_version_size" />

                <TextView
                    android:id="@+id/text_gchat_title_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="@dimen/card_max_width"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/title_placeholder"
                    android:textColor="@color/groupChatTextOther"
                    android:textSize="@dimen/text_standard" />

                <TextView
                    android:id="@+id/text_gchat_description_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="@dimen/card_max_width"
                    android:maxLines="3"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/date_vertical_padding"
                    android:text="@string/description_placeholder"
                    android:textColor="@color/groupChatTextOther"
                    android:textSize="@dimen/text_version_size" />

                <ImageView
                    android:id="@+id/image_gchat_url_other"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thumbnail_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/link_preview"
                    android:scaleType="centerCrop" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_gchat_read_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_count_placeholder"
        android:textColor="@color/groupChatReadReceiptOther"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_timestamp_other"
        app:layout_constraintStart_toEndOf="@id/card_gchat_message_other" />

    <TextView
        android:id="@+id/text_gchat_timestamp_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time_placeholder"
        android:textColor="@color/groupChatDateBackground"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_other"
        app:layout_constraintStart_toEndOf="@+id/card_gchat_message_other" />


</androidx.constraintlayout.widget.ConstraintLayout>