<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_gchat_video_date_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:background="@drawable/group_chat_date_background"
        android:paddingStart="@dimen/date_horizontal_padding"
        android:paddingTop="@dimen/date_vertical_padding"
        android:paddingEnd="@dimen/date_horizontal_padding"
        android:paddingBottom="@dimen/date_vertical_padding"
        android:text="@string/date_placeholder"
        android:textColor="@color/groupChatDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_gchat_video_profile_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_video_date_other" />

    <TextView
        android:id="@+id/text_gchat_video_user_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_margin"
        android:text="@string/name_placeholder"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toEndOf="@+id/image_gchat_video_profile_other"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_video_date_other" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_gchat_video_message_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corners"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@+id/image_gchat_video_profile_other"
        app:layout_constraintTop_toBottomOf="@+id/text_gchat_video_user_other">

        <ImageView
            android:id="@+id/image_gchat_video_thumbnail_other"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_image"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/image_gchat_video_play_other"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_gchat_video_read_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_count_placeholder"
        android:textColor="@color/groupChatReadReceiptOther"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_video_timestamp_other"
        app:layout_constraintStart_toEndOf="@id/card_gchat_video_message_other" />

    <TextView
        android:id="@+id/text_gchat_video_timestamp_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time_placeholder"
        android:textColor="@color/groupChatDateBackground"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toBottomOf="@+id/card_gchat_video_message_other"
        app:layout_constraintStart_toEndOf="@+id/card_gchat_video_message_other" />


</androidx.constraintlayout.widget.ConstraintLayout>