<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_gchat_date_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_x2"
        android:background="@drawable/group_chat_date_background"
        android:paddingStart="@dimen/date_horizontal_padding"
        android:paddingTop="@dimen/date_vertical_padding"
        android:paddingEnd="@dimen/date_horizontal_padding"
        android:paddingBottom="@dimen/date_vertical_padding"
        android:text="@string/date_placeholder"
        android:textColor="@color/groupChatDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_gchat_message_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corners"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_gchat_date_me">

        <ImageView
            android:id="@+id/image_gchat_thumbnail_me"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail_image"
            android:scaleType="centerCrop" />


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_gchat_read_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_count_placeholder"
        android:textColor="@color/groupChatReadReceiptOther"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toTopOf="@+id/text_gchat_timestamp_me"
        app:layout_constraintEnd_toStartOf="@id/card_gchat_message_me" />

    <TextView
        android:id="@+id/text_gchat_timestamp_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_time_placeholder"
        android:textColor="@color/groupChatDateBackground"
        android:textSize="@dimen/text_message_date_size"
        app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_me"
        app:layout_constraintEnd_toStartOf="@+id/card_gchat_message_me" />


</android.support.constraint.ConstraintLayout>